# SkyrimTwitchChatVR

./: Papyrus.ppj  README.md  TwitchChatVR.json  xmake.lua
.CompiledScripts/: MP_GenericFlashTextWidget.pex  MP_ScriptTracker.pex  MP_TwitchChatAPI.pex  MP_TwitchChatConfiguration.pex  MP_TwitchChatTextList.pex  MP_TwitchChatTextWidget.pex  MP_TwitchChatWidgetManager.pex
Papyrus Scripts/: xmake.lua
Papyrus Scripts/Bindings/: MP_TwitchChat.txt  UITextWidgetBindings.txt
Papyrus Scripts/Source/: ExampleTextWidget.psc  GenericFlashTextWidget.psc  MP_GenericFlashTextWidget.psc  MP_ScriptTracker.psc  MP_TwitchChatAPI.psc  MP_TwitchChatConfiguration.psc  MP_TwitchChatTextList.psc  MP_TwitchChatTextWidget.psc  MP_TwitchChatWidgetManager.psc  ScriptTracker.psc  TestShowingWidget.psc  TwitchChatMessageWidget.psc  TwitchChatTextWidget.psc  TwitchChatWidgetManager.psc  xmake.lua
TwitchBot/: pyproject.toml
TwitchBot/src/skyrim_twitch_bot/: __main__.py
TwitchChatUI/: Logging.h  PrintConsole.h  TwitchChatUI.cpp  WebSocketServer.h  xmake.lua
